<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:visibility="gone">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorTextDark"
                android:textScaleX="0.6"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:background="@drawable/button_normal"
                android:text="@string/connect_peer_button" />
            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorTextDark"
                android:textScaleX="0.6"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:background="@drawable/button_normal"
                android:text="@string/disconnect_peer_button" />
            <Button
                android:id="@+id/btn_help"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#FF0000"
                android:text="@string/send_msg_button"
                android:textScaleX="0.6"
                android:padding="5dp"
                android:background="@drawable/help_button"
                android:visibility="gone"/>

        </LinearLayout>
        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/group_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/group_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>